cluster/apps/media/radarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  ports:
    - port: 7878
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: radarr
